image thumbnail alignment fixed

--- a/app/assets/stylesheets/quick_search/quick_search.css.scss
+++ b/app/assets/stylesheets/quick_search/quick_search.css.scss
@@ -169,6 +169,7 @@
 
         .thumbnail {
             border: 1px solid #555555;
+			margin-top: 1.5em;
         }
 
         .citation {
